include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# Module name
DOC_MODULE = brasero

# Legal entity include
DOC_ENTITIES = legal.xml

# Othe includes
DOC_INCLUDES = 

# List of figures to be included
DOC_FIGURES = figures/brasero_main.png 

# List of translations
DOC_LINGUAS = bg ca cs de el en_GB es fi fr gl it pl ru sl sv zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
