include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# Module name
DOC_ID = brasero

# List of figures to be included
DOC_FIGURES = figures/brasero-main-window.png

# List of pages
DOC_PAGES = \
	create-cover.page \
	index.page \
	introduction.page \
	prob-cd.page \
	prob-dvd.page \
	project-audio.page \
	project-data.page \
	project-disc-copy.page \
	project-image-burn.page \
	project-save.page \
	project-video.page \
	split-track.page \
	tools-blank.page \
	tools-check-integrity.page

# List of translations
DOC_LINGUAS = bg ca cs de el en_GB es eu fi fr gl hu it ko pl ro ru sl sv zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
