@YELP_HELP_RULES@

# Module name
HELP_ID = brasero

# List of figures to be included
HELP_MEDIA = \
	figures/brasero-main-window.png \
	figures/logo48.png

# List of pages
HELP_FILES = \
	create-cover.page \
	index.page \
	introduction.page \
	prob-cd.page \
	prob-dvd.page \
	project-audio.page \
	project-data.page \
	project-disc-copy.page \
	project-image-burn.page \
	project-save.page \
	project-video.page \
	split-track.page \
	tools-blank.page \
	tools-check-integrity.page

# List of translations
HELP_LINGUAS = bg ca cs da de el en_GB es eu fi fr gl hu id it ja ko lv pl pt pt_BR ro ru sl te sv uk zh_CN zh_HK zh_TW

-include $(top_srcdir)/git.mk
